# seanfeldman.com

./: .gitignore  .gitmodules  README.md  blog.export.xml  go.mod  hugo.toml
.github/workflows/: blog.yml  hugo.yaml
assets/: jsconfig.json
content/: about.md
content/posts/: new-blog.md
content/posts/2025/: new-blog.md  testing.md
content/posts/old/: 2007-10-01-hello-weblogs-asp-net.md  2007-10-08-web-config-gotcha.md  2007-10-09-microsoft-mvc-framework.md  2007-10-18-poeaa.md  2007-10-20-resharper.md  2007-10-20-webresource.axd-and-webapp-project.md  2007-10-24-realdevelopment-07-real-disaster.md  2007-10-29-assembly-fun-in-asp-net.md  2007-10-30-nothing-but-net-calgary-alberta-canada.md  2007-11-03-getting-ready-for-nothing-but-net.md  2007-11-06-a-moment-thought.md  2007-11-06-motivation-injection.md  2007-11-06-nothing-but-net-calgary-2007-day-1.md  2007-11-07-nothing-but-net-calgary-2007-day-2.md  2007-11-08-nothing-but-net-calgary-2007-day-3.md  2007-11-09-nothing-but-net-calgary-2007-day-4.md  2007-11-10-nothing-but-net-calgary-2007-day-5.md  2007-11-15-svn-addin-for-vs-net.md  2007-11-22-enable-mbunit-with-msbuild-from-visual-studio.md  (+463 more)
migration-from-orchard/: .gitignore  README.md  pyproject.toml  requirements.txt
migration-from-orchard/examples/fixtures/: sample_orchard.xml
migration-from-orchard/in/: blog.export.xml
migration-from-orchard/src/orchard2md/: __init__.py  cli.py  convert.py  parser.py  writer.py
migration-from-orchard/tests/: test_convert.py  test_parse.py  test_writer.py
src/Blog/: Blog.csproj  Program.cs  global.json
(+7 files in other folders)
