[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orchard2md"
version = "0.1.0"
description = "Convert Orchard CMS exports to Markdown blog posts"
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"
dependencies = []
readme = "README.md"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
